--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
 <body>
   <h1>Module 4 Solution Starter</h1>
   <p>open console to see the output</p>
+
+
+
+
+
+
+  <script src="script.js"></script>
 </body>
 </html>
